--- a/introduction_to_smooth_manifolds_notes.tex
+++ b/introduction_to_smooth_manifolds_notes.tex
@@ -78,6 +78,9 @@
 \section{Chapter 2: Smooth Maps}
 \input{chapter2.tex}
 
+\section{Appendix A: Review of Topology}
+\input{appendix_a.tex}
+
 \section{Appendix C: Review of Calculus}
 \input{appendix_c.tex}
 
