Finish the first part of ex 2.7

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -196,7 +196,7 @@
   \end{enumerate}
 \end{proof}
 
-\begin{customexer}{1.44}
+\begin{customexer}{1.44}\label{exercise_1_44}
   Suppose $M$ is a smooth $n$-manifold with boundary and $U$ is an open subset of $M$.
   Prove the following statements:
   \begin{enumerate}[label=(\alph*)]
