--- a/chapter2.tex
+++ b/chapter2.tex
@@ -92,7 +92,7 @@
   Let $M$ and $N$ be smooth manifolds with or without boundary, and let $F: M \rightarrow N$ be a map.
   \begin{enumerate}[label=(\alph*)]
     \item 
-      If every point $p \in M$ has a neighborhood $U$ such that the restriction $F\mid_U$ is smooth, then $F$ is smooth.
+      If every point $p \in M$ has a neighborhood $U$ such that the restriction $F\vert_U$ is smooth, then $F$ is smooth.
     \item
       Conversely, if $F$ is smooth, then its restriction to every open subset is smooth.
   \end{enumerate}
@@ -103,14 +103,14 @@
   \begin{enumerate}[label=(\alph*)]
     \item 
       Let $p \in M$.
-      Let $U$ be a neighborhood of $p$ such that $F\mid_U$ is smooth.
+      Let $U$ be a neighborhood of $p$ such that $F\vert_U$ is smooth.
       By \ref{exercise_1_44}, $U$ is a smooth manifold with the induced smooth structure $\mathcal{A}_U = \{ (V, \phi) \in \mathcal{A}_M \mid V \subset U \}$.
-      Since $F\mid_U$ is smooth, there exist $(V, \phi) \in \mathcal{A}_U$ and $(W, \psi) \in \mathcal{A}_N$ such that:
+      Since $F\vert_U$ is smooth, there exist $(V, \phi) \in \mathcal{A}_U$ and $(W, \psi) \in \mathcal{A}_N$ such that:
       \begin{itemize}
         \item
-          $F\mid_U(V) \subset W$.
+          $F\vert_U(V) \subset W$.
         \item
-          $\psi \circ F\mid_U \circ \phi^{-1}:\phi(V) \rightarrow \psi(W)$ is smooth.
+          $\psi \circ F\vert_U \circ \phi^{-1}:\phi(V) \rightarrow \psi(W)$ is smooth.
       \end{itemize}
       Since $V \subset U$, $F(V) \subset W, \psi \circ F \circ \phi^{-1}:\phi(V) \rightarrow \psi(W)$ is smooth, and $(V, \phi) \in \mathcal{A}$.
       Therefore, $F$ is smooth.
