--- a/chapter2.tex
+++ b/chapter2.tex
@@ -146,9 +146,10 @@
       Moreover, for every $(U_{\alpha}, \phi_{\alpha}) \in \mathcal{A}_M, (V_{\beta}, \psi_{\beta}) \in \mathcal{A}_N$, $\psi_{\beta} \circ F \circ \phi_{\alpha}^{-1}$ is a constant map, so it is smooth.
       By \ref{exercise_2_7}, $F$ is smooth.
     \item
-      \todo[inline,caption={}]{
-        Solve this!
-      }
+      Let $p \in M$.
+      Choose $(U, \phi) \in \mathcal{A}_M$ such that $p \in U$.
+      Then $F(U) \subset U$ and $\phi \circ F \circ \phi^{-1} = \Id_U$, so it is smooth.
+      Therefore, $F$ is smooth.
     \item
       \todo[inline,caption={}]{
         Solve this!
