--- a/chapter2.tex
+++ b/chapter2.tex
@@ -151,9 +151,10 @@
       Then $F(U) \subset U$ and $\phi \circ F \circ \phi^{-1} = \Id_U$, so it is smooth.
       Therefore, $F$ is smooth.
     \item
-      \todo[inline,caption={}]{
-        Solve this!
-      }
+      By \ref{exercise_1_44}, $\mathcal{A}_U = \{ (V, \phi) \mid V \subset U \}$ is a smooth structure of $U$.
+      Let $p \in U$.
+      Then $p \in V$ for some $(V, \phi) \in \mathcal{A}_U$.
+      Then $(V, \phi) \in \mathcal{A}_M$, trivially.
+      Since $F(V) \subset V$ and $\phi \circ F \circ \phi^{-1}$ is simply the identity map on $V$, $F$ is smooth.
   \end{enumerate}
-
 \end{proof}
