Finish some of ex a.18

--- a/appendix_a.tex
+++ b/appendix_a.tex
@@ -1,6 +1,37 @@
 \begin{customexer}{A.18(Proof of Proposition A.17)}\label{exercise_a_18}
-  $ $
-  \todo[inline,caption={}]{
-    Finish this!
-  }
+  Let $X$ be a topological space and let $S$ be a subspace of $X$.
+  \begin{enumerate}[label=(\alph*)]
+    \item 
+    \item 
+    \item 
+    \item 
+    \item 
+    \item 
+    \item 
+      If $X$ is Hausdorff, then so is $S$.
+    \item 
+      If $X$ is first-countable, then so is $S$.
+    \item 
+      If $X$ is second-countable, then so is $S$.
+  \end{enumerate}
 \end{customexer}
+
+\begin{proof}
+  $ $
+  \begin{enumerate}[label=(\alph*)]
+    \item 
+    \item 
+    \item 
+    \item 
+    \item 
+    \item 
+    \item 
+      Let $x \ne y \in S$.
+      There exist two disjoint open sets $U, V$ of $X$ containing $x, y$, respectively.
+      Then $U \cap S$ and $V \cap S$ are disjoint open sets of $X$ containing $x, y$, respectively.
+    \item 
+    \item 
+      Let $\mathcal{B}$ be a countable basis of $X$.
+      Then $\{ B \cap S \mid B \in \mathcal{B} \}$ is a countable basis of $S$.
+  \end{enumerate}
+\end{proof}
