Add the definition of tangent spaces

--- a/dictionary.tex
+++ b/dictionary.tex
@@ -95,3 +95,20 @@
       $\psi \circ F \circ \phi^{-1}: \phi(U) \rightarrow \psi(V)$ is smooth.
   \end{itemize}
 \end{defn}
+
+\subsection{Tangent Vectors}
+
+\begin{defn}[Derivation]
+  Let $M$ be a smooth manifold with or without boundary.
+  A derivation at $p \in M$ is a linear map $v: C^{\infty}(M) \rightarrow \mathbb{R}$ such that 
+
+  \begin{align*}
+    v(fg) = f(p)vg + g(p)vf
+  \end{align*}
+
+  for all $f, g \in C^{\infty}(M)$.
+\end{defn}
+
+\begin{defn}[Tangent Space]
+  The tangent space $T_pM$ to $M$ at $p$ is the vector space of all derivations of $C^{\infty}(M)$ at $p$.
+\end{defn}
