--- a/introduction_to_smooth_manifolds_notes.tex
+++ b/introduction_to_smooth_manifolds_notes.tex
@@ -75,6 +75,9 @@
 \section{Chapter 2: Smooth Maps}
 \input{chapter2.tex}
 
+\section{Chapter 3: Tangent Vectors}
+\input{chapter3.tex}
+
 \section{Appendix A: Review of Topology}
 \input{appendix_a.tex}
 
