Add the problem statement of 3.7

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -21,3 +21,22 @@
       $v(fg) = f(p)vg + g(p)vf = 0 + 0 = 0$.
   \end{enumerate}
 \end{proof}
+
+\begin{customexer}{3.7(Proof of Proposition 3.6)}
+  Let $M, N$, and $P$ be smooth manifolds with or without boundary, let $F: M \rightarrow N$ and $G: N \rightarrow P$ be smooth maps, and let $p \in M$.
+  \begin{enumerate}[label=(\alph*)]
+    \item
+      $dF_p:T_pM \rightarrow T_{F(p)}N$ is linear.
+    \item
+      $d(G \circ F)_p = dG_{F(p)} \circ dF_p: T_pM \rightarrow T_{G \circ F(p)} P$.
+    \item
+      $d(\Id_M)_p = \Id_{T_pM}: T_pM \rightarrow T_pM$.
+    \item
+      If $F$ is a diffeomorphism, then $dF_p: T_pM \rightarrow T_{F(p)}N$ is an isomorphism, and $(dF_p)^{-1} = d(F^{-1})_{F(p)}$.
+  \end{enumerate}
+\end{customexer}
+
+\begin{proof}
+  \todo[inline,caption={}]{
+  }
+\end{proof}
