--- a/chapter3.tex
+++ b/chapter3.tex
@@ -62,8 +62,13 @@
       \end{align*}
       Therefore, $d(G \circ F)_p = dG_{F(p)} \circ dF_p$.
     \item
-      \todo[inline,caption={}]{
-      }
+      $\forall v \in T_p(M), \forall f \in C^{\infty}(M)$,
+      \begin{align*}
+        d(\Id_M)_p(v)(f)
+          &= v(f \circ \Id_M) \\
+          &= v(f).
+      \end{align*}
+      Therefore, $d(\Id_M)_p(v) = v$, so $d(\Id_M)_p = \Id_{T_pM}$.
     \item
       \todo[inline,caption={}]{
       }
