--- a/chapter3.tex
+++ b/chapter3.tex
@@ -70,7 +70,8 @@
       \end{align*}
       Therefore, $d(\Id_M)_p(v) = v$, so $d(\Id_M)_p = \Id_{T_pM}$.
     \item
-      \todo[inline,caption={}]{
-      }
+      $F^{-1}$ exists and it is a smooth map since $F$ is a diffeomorphism.
+      By combining (b) and (c), we obtain $dF_p$ and $dF^{-1}_{F(p)}$ are the inverse of each other.
+      Therefore, $dF_p$ is an isomorphism.
   \end{enumerate}
 \end{proof}
