--- a/dictionary.tex
+++ b/dictionary.tex
@@ -16,6 +16,9 @@
       If $\phi(U)$ is an open ball in $\mathbb{R}^n$, $U$ is called a \textit{coordinate ball}.
     \item
       If $\phi(U)$ is an open cube in $\mathbb{R}^n$, $U$ is called a \textit{coordinate cube}.
+    \item
+      The coordinate functions of $\phi$ are often denoted as $(x^1, \cdots, x^n)$.
+      Thus a chart is sometimes denoted by $(U, (x^1, \cdots, x^n))$ or $(U, (x^i))$.
   \end{itemize}
 \end{defn}
 
