Define a coordinate representaiton

--- a/dictionary.tex
+++ b/dictionary.tex
@@ -99,6 +99,12 @@
   \end{itemize}
 \end{defn}
 
+\begin{defn}[Coordinate Representatin of a Smooth Map]
+  Let $(M, \mathcal{A}_M)$ and $(N, \mathcal{A}_N)$ be smooth manifolds.
+  Let $F: M \rightarrow N$ be a smooth map and $(U, \phi) \in \mathcal{A}_M$ and $(V, \psi) \in \mathcal{A}_N$ be given.
+  Then $\hat{F} = \psi \circ F \circ \phi^{-1}$ is called the coordinate representation of $F$ with respect to $(U, \phi)$ and $(V, \psi)$.
+\end{defn}
+
 \begin{defn}[Diffeomorphism]
   Let $M, N$ be smooth manifolds with or without boundary.
   A diffeomorphism is a smooth map $F: M \rightarrow N$ with a smooth inverse.
