--- a/chapter2.tex
+++ b/chapter2.tex
@@ -182,3 +182,26 @@
       Since $F(V) \subset V$ and $\phi \circ F \circ \phi^{-1}$ is simply the identity map on $V$, $F$ is smooth.
   \end{enumerate}
 \end{proof}
+
+\begin{customexer}{2.16(Proof of Proposition 2.15)}
+  $ $
+  \begin{enumerate}[label=(\alph*)]
+    \item 
+      Every composition of diffeomorphisms is a diffeomorphism.
+    \item
+    \item
+    \item
+    \item
+  \end{enumerate}
+\end{customexer}
+
+\begin{customexer}{2.16(Proof of Proposition 2.15)}
+  $ $ 
+  \begin{enumerate}[label=(\alph*)]
+    \item 
+      Let $(M, \mathcal{A}_M), (N, \mathcal{A}_N), (P, \mathcal{A}_P)$ be smooth manifolds, and let $F: M \rightarrow N, G: N \rightarrow P$ be diffeomorphisms.
+      By Proposition 2.10(d), $G \circ F$ and $F^{-1} \circ G^{-1}$ are smooth.
+      Then $(G \circ F) \circ (F^{-1} \circ G^{-1})$ and $(F^{-1} \circ G^{-1}) \circ (G \circ F)$ are both the identity map on the corresponding space, so $F^{-1} \circ G^{-1}$ is the smooth inverse of $G \circ F$.
+      Therefore, $G \circ F$ is a diffeomorphism.
+  \end{enumerate}
+\end{customexer}
