Add a boundary condition

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -197,8 +197,7 @@
 \end{customexer}
 
 \begin{customexer}{2.16(Proof of Proposition 2.15)}
-  $ $ 
-  Let $(M, \mathcal{A}_M), (N, \mathcal{A}_N), (P, \mathcal{A}_P)$ be smooth manifolds, and let $F: M \rightarrow N, G: N \rightarrow P$ be diffeomorphisms.
+  Let $(M, \mathcal{A}_M), (N, \mathcal{A}_N), (P, \mathcal{A}_P)$ be smooth manifolds with or without boundary, and let $F: M \rightarrow N, G: N \rightarrow P$ be diffeomorphisms.
   \begin{enumerate}[label=(\alph*)]
     \item 
       By Proposition 2.10(d), $G \circ F$ and $F^{-1} \circ G^{-1}$ are smooth.
