Some minor improvement on the style!

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -213,9 +213,9 @@
       Therefore, $F$ is a homeomorphism and also an open map.
     \item
       Let $U \subset M$ be an open subset.
-      By Proposition 2.6(b) (\ref{exercise_2_7}), $F\vert_U$ is smooth.
+      By (\ref{exercise_2_7}), $F\vert_U$ is smooth.
       Since $F$ is a homeomorphism as shown in (c), $F(U)$ is an open subset of $N$.
-      Therefore, $F^{-1}\vert_{F(U)}$ is smooth by Proposition 2.6(b) (\ref{exercise_2_7}).
+      Therefore, $F^{-1}\vert_{F(U)}$ is smooth by (\ref{exercise_2_7}).
       Clearly, $F\vert_U$ and $F^{-1}\vert_{F(U)}$ are the inverse of each other.
       Therefore, $F\vert_U$ is a diffeomorphism.
     \item
