--- a/chapter2.tex
+++ b/chapter2.tex
@@ -207,6 +207,9 @@
       Then $(G \circ F) \circ (F^{-1} \circ G^{-1})$ and $(F^{-1} \circ G^{-1}) \circ (G \circ F)$ are both the identity map on the corresponding space, so $F^{-1} \circ G^{-1}$ is the smooth inverse of $G \circ F$.
       Therefore, $G \circ F$ is a diffeomorphism.
     \item
+      \todo[inline,caption={}]{
+        Read Example 1.34(Smooth Product Manifolds)!
+      }
     \item
       Proposition 2.4 states that every smooth map is continuous.
       Thus $F$ and $F^{-1}$ are both continuous.
