--- a/introduction_to_smooth_manifolds_notes.tex
+++ b/introduction_to_smooth_manifolds_notes.tex
@@ -39,6 +39,11 @@
   {\renewcommand\theinnercustomexer{#1}\innercustomexer}
   {\endinnercustomexer}
 
+\newtheorem{innercustomprob}{Problem}
+\newenvironment{customprob}[1]
+  {\renewcommand\theinnercustomprob{#1}\innercustomprob}
+  {\endinnercustomprob}
+
 \theoremstyle{remark}
 \newtheorem{rem}[thm]{Remark}
 \newtheorem{rems}[thm]{Remarks}
